# decker-pygame

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json  pytest.ini
.github/workflows/: ci.yml  release.yml
assets/Help/: Decker.rtf
assets/RES/: Decker.rc2
data/: assets.json  ds_files.json
decker-pygame/: asset_loader.py  main.py  settings.py
decker-pygame/components/: active_bar.py
docs/: architecture.md  porting_items.md  run_instructions.md  run_playbook.md
docs/architecture/: ddd_concepts.md  ddd_implementation_guide.md  event_sourcing.md  game_state_machine.md  hexagonal_architecture.md  roadmap.md
docs/development/: audit_checklist.md  coverage_exceptions.md  prompt_log.md  run_audit_report.md  technical_debt.md  technical_learnings.txt
porting-state/: Area.h  Character.cpp  Character.h  Contract.cpp  Contract.h  DSFile.h  Decker.h  Decker.ini  Decker.rc  DeckerSound.cpp  EntryDlg.cpp  FileAccessDlg.cpp  FileAccessDlg.h  Global.cpp  Global.h  HOMEVIEW.H  HomeView.cpp  IceDataDlg.cpp  IceDataDlg.h  NameDlg.h  NewCharDlg.cpp  NewCharDlg.h  NewInfo.h  NewProjectDlg.cpp  NewProjectDlg.h  Node.cpp  OptionsDlg.cpp  ProjectDataDlg.cpp  ReadMe.txt  RestDlg.h  Shop.h  ShopItem.cpp  SoundEditDlg.h  Source.h  TransferDlg.cpp
porting-state/Ideas/: ReadMe.txt  To-Do.txt
porting-state/Ideas/MissionCode/: Mission.h  Missions.ini  ReadMe.txt
porting-state/Ideas/TransparentCode/: MessageView.cpp  MessageView.h  ReadMe.txt
porting-state/done/: ActiveBar.cpp  ActiveBar.h  AlarmBar.cpp  AlarmBar.h  Area.cpp  BuildDialog.cpp  BuildDialog.h  CharDataDialog.cpp  CharDataDialog.h  ClockView.cpp  ClockView.h  ContractDataDialog.cpp  ContractDataDialog.h  ContractListDialog.cpp  ContractListDialog.h  CustomButton.cpp  CustomButton.h  DSFile.cpp  DeckDataDialog.cpp  DeckDataDialog.h  Decker.cpp  DeckerGraphics.cpp  DeckerGraphics.h  DeckerSound.h  EntryDlg.h  HealthBar.cpp  HealthBar.h  Ice.cpp  Ice.h  ImageArray.cpp  ImageArray.h  ImageDisplay.cpp  ImageDisplay.h  IntroDlg.cpp  IntroDlg.h  MapView.cpp  MapView.h  MatrixView.cpp  MatrixView.h  MessageView.cpp  (+26 more)
scripts/: generate_coverage_exceptions.py  generate_sample_run_log.py  preflight.sh  preflight.zsh
src/decker_pygame/: asset_loader.py  config.py  game.py  main.py  settings.py  utils.py
src/decker_pygame/application/: character_service.py  contract_service.py  crafting_service.py  deck_service.py  decorators.py  domain_event_handlers.py  ds_file_service.py  dtos.py  event_dispatcher.py  event_handlers.py  logging_service.py  matrix_run_service.py  node_service.py  player_service.py  project_service.py  services.py  settings_service.py  shop_service.py
src/decker_pygame/components/: active_bar.py  alarm_bar.py
src/decker_pygame/domain/: aggregate.py  area.py  character.py  character_repository_interface.py  contract.py  contract_repository_interface.py  crafting.py  deck.py  dice_service.py  ds_file.py  entity.py  events.py  ice.py  ids.py  model.py  node.py  player.py  player_repository_interface.py  program.py  project.py  repositories.py  shop.py  system.py
src/decker_pygame/infrastructure/: in_memory_ds_file_repository.py  in_memory_system_repository.py  json_deck_repository.py  (+5 more)
tests/: conftest.py  test_asset_loader.py  test_config.py  test_game.py  test_main.py  test_main_dunder_guard.py  test_settings.py  test_utils.py
tests/application/: test_character_service.py  test_contract_accept.py  test_contract_service.py  test_crafting_service.py  test_deck_service.py  test_decorators.py  test_domain_event_handlers.py  test_ds_file_service.py  test_event_dispatcher.py  test_event_handlers.py  test_logging_service.py  test_matrix_run_service.py  test_node_service.py  test_player_service.py  test_project_service.py  test_services.py  test_settings_service.py  test_shop_service.py
tests/components/: test_active_bar.py  test_alarm_bar.py
tests/domain/: test_area.py  test_character.py  test_character_repository_interface.py  test_contract.py  test_crafting.py  test_deck.py  test_dice_service.py  test_domain_model.py  test_ds_file.py  test_events.py  test_ice.py  test_node.py  test_player.py  test_player_repository_interface.py  test_program.py  test_project.py  test_repositories.py  test_system.py
tests/infrastructure/: test_in_memory_ds_file_repository.py  test_in_memory_system_repository.py  test_json_character_repository.py  test_json_contract_repository.py  test_json_deck_repository.py  test_json_ds_file_repository.py  test_json_player_repository.py
tests/integration/: test_sample_run.py
tests/model/: test_area.py  test_area_model.py  test_character_model.py  test_contract.py  test_ice_model.py  test_model.py  test_models.py  test_program_model.py  test_system_and_nodes.py  test_system_model.py
tests/presentation/: conftest.py  test_asset_loader.py  test_asset_service.py  test_asset_service_images.py  test_debug_actions.py  test_force_view_manager_cover.py  test_game.py  test_game_helpers.py  test_game_lifecycle.py  test_game_views.py  test_input_handler.py  test_logging.py  test_main.py  test_main_dunder_guard.py  test_utils.py  test_utils_current_line_cover.py  test_view_manager.py  test_view_manager_modal_toggle.py
tests/temp/: old_test_game.py
typings/pygame/: typing.pyi
unused-assets/Help/: Decker.cnt  Decker.hpj  Decker.rtf
(+128 files in other folders)
